2010-11-06  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Folding in @factor_out fixes for non-commutative objects
	received from James Allen (the first proper patches from an
	outsider, yeah!)

2010-11-05  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fix of pattern matching of indices of different types, resolving
	some long-standing problems.

	* Cleanup of redundant variables and parameters in a number of places.

2010-04-26  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.25

	* Disabled messy output of procedure calls in the GUI.

	* Fixed bug in @eliminate_metric/vielbein which would fail to
	reset internal variables and thus mess up expressions.

2010-04-25  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.24

	* Added handling of dependency information in
	@eliminate_metric and @eliminate_vielbein.

	* Fixed parser bug for x**{2} and related expressions, which would
	introduce spurious brackets.

2010-04-04  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.23

2010-04-01  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed bug in @expand_power which would mess up numerical factors.

2010-03-28  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed a bug in printing of \pow.

	* Added setting for brains wired to windows Home/End keys.

2010-03-23  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.22

	* Fixed bug in cut-n-paste output of derivatives (which would fail
	to produce curly brackets and would add a "\," at the end).

	* Fixed bug that would make canonicalise act on \arrow nodes, with
	a crash as result.

2010-03-20  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.21

	* Fixed canonicalising expressions with anti-commuting indices.

	* Fixed automatic raising/lowering of indices in canonicalise, and
	added `position=independent' option for Indices to prevent this
	from happening when it is not wanted.

2010-03-19  Kasper Peeters  <kasper.peeters@aei.mpg.de>
