@@ -1,3 +1,8 @@
+2010-12-23  Kasper Peeters  <kasper.peeters@aei.mpg.de>
+
+	* Final fixes for pattern matching with super/sub indices done
+	correctly. 
+
 2010-11-06  Kasper Peeters  <kasper.peeters@aei.mpg.de>
 
 	* Folding in @factor_out fixes for non-commutative objects
